# elizaos-cpp

./: .gitignore  .gitignore.backup  AGENTCOMMS_ENHANCED.md  CMakeLists.txt  ELIZA_3D_HYPERFY_STARTER_IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  README.md  STATUS_REPORT.md  agentcomms_demo  agentcomms_demo.cpp  agentshell_demo  agentshell_demo.cpp  agentshell_test.cpp  comprehensive_demo.cpp  demo_stage5.cpp  demo_stage6.cpp  easycompletion_demo.cpp  elizas_list_demo.cpp  hats_demo.cpp  registry_demo.cpp  shell_demo  simple_agentcomms_demo  simple_agentcomms_demo.cpp  simple_shell_test  simple_shell_test.cpp  spartan_demo.cpp  spartan_test.cpp  test_agentcomms_cross_interference  test_agentcomms_cross_interference.cpp  test_agentcomms_enhanced  test_agentcomms_standalone  the_org_demo.cpp
.github/: copilot-instructions.md
.github/agents/: elizaos-cpp.md  marderebusk.md
.github/workflows/: cpp-build.yml  cppissues.yml  implementation-tracker.yml
LiveVideoChat/: package-lock.json  package.json
_codeql_build_dir/: awesome_eliza_demo  easycompletion_demo  eliza_3d_hyperfy_starter_demo  elizas_list_demo  elizas_list_real_test  elizas_list_unit_test  elizas_world_demo  elizas_world_test  spartan_demo  spartan_test  stage4_demo  stage5_demo  the_org_demo
_codeql_build_dir/cpp/autonomous_starter/: autonomous_starter_demo  autonomous_starter_tests
_codeql_build_dir/cpp/tests/: elizaos_tests[1]_include.cmake
_codeql_build_dir/cpp/vercel_api/: demo_vercel_api  test_vercel_api
autonomous-starter/: package.json
brandkit/: README.md
build_release/cpp/tests/: elizaos_tests[1]_include.cmake
characterfile/: package-lock.json  package.json
characterfile/schema/: character.schema.json
characters/: c3po.character.json  lpmanager.character.json  omniflix.character.json
cpp/agentcomms/src/: agentcomms.cpp
cpp/agentlogger/src/: agentlogger.cpp
cpp/agentshell/src/: agentshell.cpp
cpp/auto_fun/: CMakeLists.txt
cpp/auto_fun/src/: auto_fun.cpp
cpp/autonomous_starter/: CMakeLists.txt  README.md
cpp/autonomous_starter/src/: test_autonomous_starter.cpp
cpp/characterfile/src/: placeholder.cpp
cpp/characters/: CMakeLists.txt
cpp/characters/src/: character_json_loader.cpp  placeholder.cpp
cpp/discord_summarizer/: CMakeLists.txt
cpp/discord_summarizer/src/: discord_summarizer.cpp
cpp/discrub_ext/: CMakeLists.txt
cpp/discrub_ext/src/: discrub_ext.cpp
cpp/easycompletion/: CMakeLists.txt  README.md
cpp/easycompletion/src/: easycompletion.cpp
cpp/eliza/: CMakeLists.txt
cpp/eliza/src/: placeholder.cpp
cpp/eliza_starter/: CMakeLists.txt  README.md  example.cpp
cpp/eliza_starter/src/: eliza_starter.cpp
cpp/elizas_list/: CMakeLists.txt
cpp/elizas_list/src/: elizas_list.cpp
cpp/embodiment/: CMakeLists.txt
cpp/embodiment/src/: console_text_interface.cpp  embodiment.cpp  embodiment_manager.cpp  file_sensory_interface.cpp  mock_motor_interface.cpp  perception_action_loop.cpp
cpp/evolutionary/: CMakeLists.txt
cpp/evolutionary/src/: adaptation_hooks.cpp  adaptation_hooks_simple.cpp  evolutionary.cpp  pattern_extraction.cpp
cpp/hats/: CMakeLists.txt  README.md
cpp/hats/src/: hats.cpp
cpp/hats/test/: test_hats.cpp
cpp/knowledge/: CMakeLists.txt
cpp/knowledge/src/: placeholder.cpp
cpp/livevideochat/: CMakeLists.txt
cpp/livevideochat/src/: livevideochat_server.cpp
cpp/ljspeechtools/: CMakeLists.txt
cpp/ljspeechtools/src/: ljspeechtools.cpp
cpp/plugin_specification/: CMakeLists.txt
cpp/plugin_specification/src/: placeholder.cpp
cpp/plugins_automation/: CMakeLists.txt
cpp/plugins_automation/src/: plugins_automation.cpp
cpp/registry/: CMakeLists.txt
cpp/registry/src/: registry.cpp
cpp/spartan/: CMakeLists.txt
cpp/spartan/src/: spartan.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: test_easycompletion.cpp  test_embodiment.cpp  test_evolutionary.cpp  test_registry.cpp  test_spartan.cpp  test_stage6_automation.cpp  test_the_org.cpp
cpp/the_org/: CMakeLists.txt
cpp/the_org/src/: the_org.cpp
cpp/vercel_api/: CMakeLists.txt  README.md  demo_vercel_api.cpp  test_vercel_api.cpp
cpp/vercel_api/src/: placeholder.cpp
docs/: AUTO_FUN_MODULE.md  IMPLEMENTATION_GUIDE.md
eliza-nextjs-starter/: package.json
eliza-nextjs-starter/src/: plugin-groq.ts
eliza-nextjs-starter/src/app/: fonts.ts
eliza-nextjs-starter/src/components/: chat-simple.tsx
eliza-nextjs-starter/src/lib/: api-client.ts
eliza-nextjs-starter/src/plugin-rag/: index.ts
eliza-plugin-starter/: .env.example  IMPLEMENTATION_STATUS.md  README.md
eliza-plugin-starter/characters/: eternalai.character.json  mathbot.character.json
eliza-plugin-starter/docs/: PLUGIN_GUIDE.md
eliza-plugin-starter/src/: index.ts  test-plugins.ts
eliza-plugin-starter/src/plugins/exa/: index.ts
eliza-starter/: pnpm-lock.yaml
elizaos.github.io/: SETUP.md  next.config.js
elizaos.github.io/config/: pipeline.config.ts
elizaos.github.io/src/app/: layout.tsx
elizas-world/: package-lock.json  package.json  pnpm-lock.yaml
examples/: agentbrowser_demo.cpp  agentbrowser_starter.cpp
hats/: README.md
include/elizaos/: agentbrowser.hpp  agentcomms.hpp  agentshell.hpp  auto_fun.hpp  characterfile.hpp  characters.hpp  core.hpp  discord_summarizer.hpp  discrub_ext.hpp  easycompletion.hpp  eliza.hpp  eliza_starter.hpp  elizas_list.hpp  embodiment.hpp  evolutionary.hpp  hats.hpp  knowledge.hpp  livevideochat_server.hpp  plugin_specification.hpp  plugins_automation.hpp  registry.hpp  spartan.hpp  the_org.hpp
plugin-specification/core-plugin-v1/: README.md  validate.js
plugin-specification/core-plugin-v1/src/: action.ts  database.ts  index.ts  knowledge.ts  relationship.ts
plugins-automation/: package-lock.json  package.json
registry/site/: package-lock.json  pnpm-lock.yaml
spartan/: package.json
the-org/: package.json
trust_scoreboard/: package-lock.json  package.json
trust_scoreboard/src/services/: useUsers.tsx
vercel-api/: package-lock.json  package.json
website/: README.md  index.html  package-lock.json  package.json  script.js  server.js  style.css
(+13 files in other folders)
